# sambyeol

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  sambyeol.manifest
app/src/: main.cpp
app/src/resources/: accel.aps  accel.rc  resource.h
app/src/sambyeol/: SambyeolWindow.cpp  SambyeolWindow.h
app/src/window/: BaseWindow.h  DpiScale.h  MainWindow.cpp  MainWindow.h
cmake/: assimp.cmake  compiler_features.cmake  glm.cmake
sambyeol_lib/: CMakeLists.txt
sambyeol_lib/src/bitmap/: Bitmap.cpp  Bitmap.h
sambyeol_lib/src/util/: FPSCounter.cpp  FPSCounter.h
sambyeol_lib/src/window/: BaseWindow.h  MainWindow.cpp  MainWindow.h
